src/test/ui/feature-gate-allow-internal-unstable.stderr
error[E0658]: allow_internal_unstable side-steps feature gating and stability checks
  --> $DIR/feature-gate-allow-internal-unstable.rs:13:1
   |
13 | #[allow_internal_unstable] //~ ERROR allow_internal_unstable side-steps
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(allow_internal_unstable)] to the crate attributes to enable

error: aborting due to previous error

